@@ -1,0 +1,3 @@
+library(testthat)
+library(animint)
+test_package("animint")
